Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25666

GDB "Additional Startup Commands" comments result in "Undefined command" prompts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 5.0.0-beta1
    • Qt Creator 4.15.0-rc1
    • Debugger
    • None
    • Linux/X11
    • 077c149667a6c8d59c771e4618167db08060ace0 (qt-creator/tqtc-qt-creator/master)

    Description

      Given the following content in Options -> Debugger -> GDB -> Additional Startup Commands:

       

      # test
      
      # test
      
      # test
      

       

       

      Starting a debug session I get two modal dialog prompts with the error:

       Undefined command: "". Try "help".

      The issue seems to be new in 4.15 (I don't see it in 4.14.2).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            ngladitz Nils Gladitz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes