Debugger: Don't pass comments as custom commands to backends

GDB creates disturbing replies for them.

Fixes: QTCREATORBUG-25666
Change-Id: If6223d1065cb96301e3e25aec15e653702e78d08
Reviewed-by: Christian Stenger <christian.stenger@qt.io>